--- a/briar-android/src/main/res/values-es/strings.xml
+++ b/briar-android/src/main/res/values-es/strings.xml
@@ -151,7 +151,6 @@
   <string name="groups_create_group_invitation_button">Enviar invitación</string>
   <string name="groups_create_group_hint">Dar nombre al grupo privado</string>
   <string name="groups_invitation_sent">Se ha mandado la invitación de grupo</string>
-  <string name="groups_compose_message">Escribir mensaje</string>
   <string name="groups_message_sent">Mensaje enviado</string>
   <string name="groups_member_list">Integrantes</string>
   <string name="groups_invite_members">Invitar miembros</string>
@@ -182,6 +181,7 @@
   <string name="groups_invitations_response_declined_sent">Declinaste la invitación de grupo de %s.</string>
   <string name="groups_invitations_response_accepted_received">%s ha aceptado la invitación al grupo.</string>
   <string name="groups_invitations_response_declined_received">%s ha declinado la invitación al grupo.</string>
+  <string name="sharing_status_groups">Solo el creador puede invitar nuevos miembros al grupo. Abajo se listan todos los participantes actuales.</string>
   <!--Private Groups Revealing Contacts-->
   <string name="groups_reveal_contacts">Revelar contactos</string>
   <string name="groups_reveal_dialog_message">Puedes elegir si revelar los contactos a los actuales y futuros integrantes de este grupo.\n\nRevelar los contactos mejora la velocidad y la fiabilidad de tu conexión, porque puedes comunicarte con los contactos revelados incluso cuando el creador del grupo no se encuentra conectado.</string>
@@ -201,15 +201,10 @@
     <item quantity="one">%d publicación</item>
     <item quantity="other">%d publicaciones</item>
   </plurals>
-  <string name="forum_compose_post">Nueva publicación en el foro</string>
   <string name="forum_new_entry_posted">Entrada en el foro publicada</string>
   <string name="forum_new_message_hint">Nueva entrada</string>
   <string name="forum_message_reply_hint">Nueva respuesta</string>
   <string name="btn_reply">Responder</string>
-  <plurals name="message_replies">
-    <item quantity="one">%1$d respuesta</item>
-    <item quantity="other">%1$d respuestas</item>
-  </plurals>
   <string name="forum_leave">Abandonar foro</string>
   <string name="dialog_title_leave_forum">Confirmación abandono del foro</string>
   <string name="dialog_message_leave_forum">¿Seguro que quieres abandonar el foro? Puede que los contactos que invitaste al foro dejen de recibir actualizaciones del mismo.</string>
@@ -236,6 +231,7 @@
   <string name="forum_invitation_response_accepted_received">%s aceptó la invitación al foro.</string>
   <string name="forum_invitation_response_declined_received">%s rechazó la invitación al foro.</string>
   <string name="sharing_status">Estado de la compartición</string>
+  <string name="sharing_status_forum">Cualquier miembro de un foro puede compartirlo con sus contactos. Estás compartiendo este foro con los contactos listados a continuación. Puede haber otros miembros que no puedes ver.</string>
   <string name="shared_with">Compartido con %1$d (%2$d en línea)</string>
   <plurals name="forums_shared">
     <item quantity="one">%d foro compartido por contactos</item>
@@ -273,6 +269,7 @@
   <string name="blogs_sharing_invitations_title">Invitaciones a blogs</string>
   <string name="blogs_sharing_joined_toast">Suscrito al blog</string>
   <string name="blogs_sharing_declined_toast">Rechazada invitación al blog</string>
+  <string name="sharing_status_blog">Cualquiera que se suscriba a un blog puede compartirlo con sus contactos. Estás compartiendo este blog con contactos listados a continuación. Puede haber otros suscriptores que no puedes ver.</string>
   <!--RSS Feeds-->
   <string name="blogs_rss_feeds_import">Importar canal RSS</string>
   <string name="blogs_rss_feeds_import_button">Importar</string>
@@ -282,6 +279,9 @@
   <string name="blogs_rss_feeds_manage_imported">Importado:</string>
   <string name="blogs_rss_feeds_manage_author">Autor:</string>
   <string name="blogs_rss_feeds_manage_updated">Última actualización:</string>
+  <string name="blogs_rss_remove_feed">Eliminar canal RSS</string>
+  <string name="blogs_rss_remove_feed_dialog_message">¿Seguro que quieres borrar este canal RSS y todas sus publicaciones?\nNo se eliminará ningún artículo que hayas compartido de los dispositivos de otras personas.</string>
+  <string name="blogs_rss_remove_feed_ok">Eliminar canal RSS</string>
   <string name="blogs_rss_feeds_manage_delete_error">¡El canal no pudo ser eliminado!</string>
   <string name="blogs_rss_feeds_manage_empty_state">No has importado ningún canal RSS.\n\n¿Por qué no pulsas el signo más de la esquina superior derecha para añadir el primero?</string>
   <string name="blogs_rss_feeds_manage_error">Hubo un problema cargando tus canales RSS. Por favor, prueba más tarde.</string>
@@ -290,6 +290,10 @@
   <string name="bluetooth_setting">Connectar mediante Bluetooth</string>
   <string name="bluetooth_setting_enabled">Cuando haya contactos cerca</string>
   <string name="bluetooth_setting_disabled">Solo al añadir contactos</string>
+  <string name="tor_network_setting">Conectar a través de Tor</string>
+  <string name="tor_network_setting_never">Nunca</string>
+  <string name="tor_network_setting_wifi">Solo con wifi</string>
+  <string name="tor_network_setting_always">Con wifi o datos móviles</string>
   <!--Settings Security and Panic-->
   <string name="security_settings_title">Seguridad</string>
   <string name="change_password">Cambiar contraseña</string>
@@ -349,4 +353,9 @@
   <string name="dev_report_saved">Informe guardado. Se enviará la próxima vez que inicies Briar.</string>
   <!--Sign Out-->
   <string name="progress_title_logout">Saliendo de Briar…</string>
+  <!--Screen Filters & Tapjacking-->
+  <string name="screen_filter_title">Filtro de pantalla detectado</string>
+  <string name="screen_filter_body">Las siguientes aplicaciones pueden mostrarse por encima de otras:\n\n%1$s \n\nBriar no reaccionará a los toques mientras otra aplicación se muestre encima.
+Si experiencia algún problema, pruebe a desactivar esas aplicaciones cuando use Briar.\n</string>
+  <string name="checkbox_dont_show_again">No mostrar más para estas aplicaciones</string>
 </resources>
