--- a/briar-android/src/main/res/values/strings.xml
+++ b/briar-android/src/main/res/values/strings.xml
@@ -381,9 +381,8 @@
 	<string name="progress_title_logout">Signing out of Briar…</string>
 
 	<!-- Screen Filters & Tapjacking -->
-	<string name="screen_filter_title">Screen filter detected</string>
-	<string name="screen_filter_body">The following apps have permission to draw over other apps:\n\n%1$s \n\nBriar will not respond to touches when another app is drawing over it.
-If you experience any problems, try turning off these apps when using Briar.\n</string>
+	<string name="screen_filter_title">Screen overlay detected</string>
+	<string name="screen_filter_body">Another app is drawing on top of Briar. To protect your security, Briar will not respond to touches while another app is drawing on top.\n\nThe following apps have permission to draw on top:\n\n%1$s \n\nTry turning off these apps when using Briar.\n</string>
 	<string name="checkbox_dont_show_again">Don\'t warn me again for these apps</string>
 
 </resources>
